[gd_scene load_steps=13 format=3 uid="uid://3o3qmldlg564"]

[ext_resource type="Script" path="res://nodes/characters/character.gd" id="1_p3s52"]
[ext_resource type="PackedScene" uid="uid://bbu5jb7gd1sp6" path="res://nodes/actors/actor_prefabs/party_members/mirabelle_actor.tscn" id="2_t6e3b"]
[ext_resource type="Script" path="res://addons/behaviour_toolkit/finite_state_machine/fsm.gd" id="3_035ab"]
[ext_resource type="Script" path="res://addons/behaviour_toolkit/finite_state_machine/fsm_state.gd" id="4_5ixgy"]
[ext_resource type="Script" path="res://nodes/characters/components/visual/character_skin.gd" id="5_b64xg"]
[ext_resource type="Script" path="res://nodes/characters/components/visual/character_visual_manager.gd" id="6_5nv5h"]
[ext_resource type="Script" path="res://nodes/characters/components/movement/character_mover.gd" id="7_n13gb"]
[ext_resource type="Script" path="res://nodes/characters/components/input/character_player_input_manager.gd" id="8_vxhom"]
[ext_resource type="PackedScene" uid="uid://ds1bp67gst5d1" path="res://nodes/characters/character_camera_manager.tscn" id="9_hn41o"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0peiy"]
radius = 0.32
height = 1.36678

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_42ylw"]
albedo_color = Color(0, 0.862745, 0.87451, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vkyra"]
lightmap_size_hint = Vector2i(17, 14)
material = SubResource("StandardMaterial3D_42ylw")
radius = 0.3
height = 1.3
radial_segments = 8
rings = 4

[node name="Mirabelle" type="CharacterBody3D" node_paths=PackedStringArray("_fsm", "_character_visual_manager", "_character_skin", "_character_mover", "_character_input_manager", "_character_camera_manager")]
script = ExtResource("1_p3s52")
_fsm = NodePath("FiniteStateMachine")
_actor_scene = ExtResource("2_t6e3b")
_character_visual_manager = NodePath("CharacterVisualManager")
_character_skin = NodePath("CharacterSkin")
_character_mover = NodePath("CharacterMover")
_character_input_manager = NodePath("CharacterPlayerInput")
_character_camera_manager = NodePath("CharacterCameraManager")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.694401, 0)
shape = SubResource("CapsuleShape3D_0peiy")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "actor")]
script = ExtResource("3_035ab")
autostart = true
initial_state = NodePath("Idle")
actor = NodePath("..")

[node name="Idle" type="Node" parent="FiniteStateMachine"]
script = ExtResource("4_5ixgy")

[node name="Crawling" type="Node" parent="FiniteStateMachine"]
script = ExtResource("4_5ixgy")

[node name="Walking" type="Node" parent="FiniteStateMachine"]
script = ExtResource("4_5ixgy")

[node name="Jumping" type="Node" parent="FiniteStateMachine"]
script = ExtResource("4_5ixgy")

[node name="Diving" type="Node" parent="FiniteStateMachine"]
script = ExtResource("4_5ixgy")

[node name="Sprinting" type="Node" parent="FiniteStateMachine"]
script = ExtResource("4_5ixgy")

[node name="Skampering" type="Node" parent="FiniteStateMachine"]
script = ExtResource("4_5ixgy")

[node name="Sliding" type="Node" parent="FiniteStateMachine"]
script = ExtResource("4_5ixgy")

[node name="Mantling" type="Node" parent="FiniteStateMachine"]
script = ExtResource("4_5ixgy")

[node name="Wallrunning" type="Node" parent="FiniteStateMachine"]
script = ExtResource("4_5ixgy")

[node name="CharacterSkin" type="Node3D" parent="."]
script = ExtResource("5_b64xg")

[node name="Mesh" type="MeshInstance3D" parent="CharacterSkin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.652755, 0)
mesh = SubResource("CapsuleMesh_vkyra")

[node name="CharacterVisualManager" type="Node" parent="."]
script = ExtResource("6_5nv5h")

[node name="CharacterMover" type="Node" parent="."]
script = ExtResource("7_n13gb")
jump_force = 5
walk_speed = 4.0
run_speed = 7.0

[node name="CharacterPlayerInput" type="Node" parent="." node_paths=PackedStringArray("camera_component")]
script = ExtResource("8_vxhom")
camera_component = NodePath("../CharacterCameraManager")

[node name="CharacterCameraManager" parent="." instance=ExtResource("9_hn41o")]
_camera_distance = 2
_lerp_camera_position = true
